# modorganizer-installer_giants

./: .gitignore  README.md  make.ps1  pyproject.toml
src/: __init__.py  dialog.py  plugin.py
src/common/: manifest.py
src/ui/: installerdialog.ui
